fix: img was overflow screen

--- a/_sass/devlopr.scss
+++ b/_sass/devlopr.scss
@@ -109,6 +109,10 @@ ol, ul {
     margin-left: 30px !important;
 }
 
+img {
+    max-width: 100%;
+}
+
 /* Progress bar */
 .progressline .bar {
     background: #f69801;
